<resources>
    <string name="app_name">ColorApp</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="button_white">WHiTE</string>
    <string name="orange_button">ORNAGE</string>
    <string name="button_black">BLACK</string>
    <string name="button_blue">BLUE</string>
    <string name="how_to_play">How To Play</string>
    <string name="into_text">Tap buttons and screen</string>
</resources>